kuber-homeworks/3.4/sol/app*/deployment1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
      - name: nginx
        image: nginx:1.29.3-alpine
        volumeMounts:
        - name: nginx-config
          mountPath: /usr/share/nginx/html
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "100m"
      volumes:
      - name: nginx-config
        configMap:
          name: nginx-config-vol1
