kuber-homeworks/3.4/sol/app*/service-new.yaml
apiVersion: v1
kind: Service
metadata:
  name: ngx-new
  namespace: app
spec:
  ports:
    - name: app2
      port: 80
      protocol: TCP
  selector:
    app: app2
