kuber-homeworks/3.4/sol/app*/service-stable.yaml
apiVersion: v1
kind: Service
metadata:
  name: ngx-stable
  namespace: app
 
spec:
  ports:
    - name: app1
      port: 80
      protocol: TCP
  selector:
    app: app1
